--- a/style.css
+++ b/style.css
@@ -1,3 +1,175 @@
 body {
-    background: blue;
-  }
+  background-color: whitesmoke;
+}
+
+.navbar{
+    width: 200px;
+    float: 75px;
+    margin: 70px;
+    
+
+}
+.icon{
+    width:200px;
+    float: lefyt;
+    height: 70px;
+
+}
+.logo{
+    color:yellow;
+    font-size: 35px
+    font-family: Arial;
+    padding-left: 20px;
+    float: left;
+    padding-top: 10px;
+
+}
+.menu{
+    width: 400px;
+    float: left;
+    height:70px;
+    padding-top: 10px;
+}
+ul{
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ul li{
+    list-style: none;
+    margin-left: 62px;
+    margin-top: -115px;
+    font-size: 14px;
+}
+ul li a:hover{
+color:red
+}
+.search{
+    width: 300px;
+    float: left;
+    margin-left: 700px;
+}
+.srch{
+    font-family: "Times New Roman";
+    width: 200px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid orangered;
+    margin-top: 13px;
+    border-right: none;
+    font-size: 16px;
+    float: left;
+    padding: 10px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+
+}
+.btn{
+    width: 100px;
+    height: 40px;
+    border: 2px solid orangered;
+    margin-top: 13px;
+    color: blue;
+    font-size: 15px;
+    border-bottom-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.btn:focus{
+    outline: none
+}
+
+.srch:focus{
+  outline: none
+}
+.content{
+  width: 1200px;
+  height: auto;
+  float: left;
+  margin-left: 100px;
+  position: relative;
+}
+.content .par{
+  padding-left:20px;
+  padding-bottom: 25px;
+  font-family: Arial;
+  letter-spacing: 1.2px;
+  line-height: 30px;
+
+}
+.content h1{
+  font-family: "Times New Roman";
+  font-size: 50px;
+  padding-left: 20px;
+  margin-top: 9px;
+  letter-spacing: 2px;
+}
+.content span{
+  color:aqua;
+  font-size: 60px;
+}
+.form{
+  width: 250px;
+  height: 380px;
+  background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
+  position: absolute;
+  top: -20px;
+  left: 870px;
+  border-radius: 10px;
+  padding: 25px;
+}
+.form h2{
+  width: 220;
+  font-family: sans-serif;
+  text-align: center;
+  color: aqua;
+  font-size: 22px;
+  background-color: white;
+  border-radius: 10px;
+  margin: 2px;
+  padding: 8px;
+}
+
+.form input{
+  width: 220px;
+  height: 35px;
+  background: whitesmoke;
+  font-size: 15px;
+  letter-spacing: 1px;
+  margin-top: 30px;
+  font-family: sans-serif;
+}
+.btnn{
+  width: 240px;
+  height: 40px;
+  background: aqua;
+  border: none;
+  margin-top: 30px;
+  font-size: 18px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: whitesmoke;
+}
+.btnn:hover{
+  background: aqua;
+  color: whitesmoke;
+}
+.liw{
+  padding-top: 15px;
+  padding-bottom: 10px;
+  text-align: center;
+}
+.icon a{
+  text-decoration: none;
+  color: whitesmoke;
+}
+.icon ion-icon{
+  color: whitesmoke;
+  font-size: 25px;
+  padding-left: 10px;
+  padding-top: 2px;
+}
+.icons ion-icon:hover{
+  color: orangered;
+
+}
